--- a/pom.xml
+++ b/pom.xml
@@ -35,14 +35,13 @@
                 <groupId>org.apache.maven.plugins</groupId> 
                 <artifactId>maven-dependency-plugin</artifactId> 
                 <configuration> 
-                    
-<outputDirectory>${project.build.directory}/lib/</outputDirectory> 
+                    <outputDirectory>${project.build.directory}/lib/</outputDirectory> 
                     <overWriteReleases>false</overWriteReleases> 
                     <overWriteSnapshots>false</overWriteSnapshots> 
                     <overWriteIfNewer>true</overWriteIfNewer> 
                 </configuration> 
                 <executions> 
-                    <execution> 
+                    <execution > 
                         <id>copy-dependencies</id> 
                         <phase>package</phase> 
                         <goals> 
@@ -52,6 +51,34 @@
                 </executions> 
             </plugin> 
   </plugins>
+  <pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.eclipse.m2e</groupId>
+        <artifactId>lifecycle-mapping</artifactId>
+        <version>1.0.0</version>
+        <configuration>
+          <lifecycleMappingMetadata>
+            <pluginExecutions>
+              <pluginExecution>
+                <pluginExecutionFilter>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-dependency-plugin</artifactId>
+                  <versionRange>[2.0,)</versionRange>
+                  <goals>
+                    <goal>copy-dependencies</goal>
+                  </goals>
+                </pluginExecutionFilter>
+                <action>
+                  <execute />
+                 </action>
+              </pluginExecution>
+            </pluginExecutions>
+          </lifecycleMappingMetadata>
+        </configuration>
+      </plugin>
+    </plugins>
+  </pluginManagement>
  </build>
 
     <dependencies>
