--- a/pom.xml
+++ b/pom.xml
@@ -41,9 +41,9 @@
                     <overWriteIfNewer>true</overWriteIfNewer> 
                 </configuration> 
                 <executions> 
-                    <execution > 
+                    <execution> 
                         <id>copy-dependencies</id> 
-                        <phase>package</phase> 
+                        <phase>package</phase>  
                         <goals> 
                             <goal>copy-dependencies</goal> 
                         </goals> 
@@ -127,5 +127,13 @@
         	<artifactId>args4j</artifactId>
         	<version>2.0.23</version>
         </dependency>
+        
+        <!--  CSV Read/Write library -->
+        <dependency>
+            <groupId>net.sourceforge.javacsv</groupId>
+            <artifactId>javacsv</artifactId>
+            <version>2.0</version>
+        </dependency>        
+        
     </dependencies>
 </project>
