--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.filteredpush</groupId>
+            <artifactId>FP-Core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
         	<groupId>org.mongodb</groupId>
         	<artifactId>mongo-java-driver</artifactId>
         	<version>2.11.1</version>
